--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -82,276 +82,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Population name</th>\n",
-       "      <th>Population code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Finnish</td>\n",
-       "      <td>FIN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Finnish,Finnish</td>\n",
-       "      <td>FIN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>British</td>\n",
-       "      <td>GBR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Southern Han Chinese</td>\n",
-       "      <td>CHS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>Puerto Rican</td>\n",
-       "      <td>PUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>Dai Chinese</td>\n",
-       "      <td>CDX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>Colombian</td>\n",
-       "      <td>CLM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>215</th>\n",
-       "      <td>Iberian,Spanish</td>\n",
-       "      <td>IBS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217</th>\n",
-       "      <td>Iberian</td>\n",
-       "      <td>IBS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227</th>\n",
-       "      <td>Kinh Vietnamese</td>\n",
-       "      <td>KHV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>Peruvian</td>\n",
-       "      <td>PEL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>241</th>\n",
-       "      <td>Punjabi</td>\n",
-       "      <td>PJL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>African Caribbean</td>\n",
-       "      <td>ACB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>446</th>\n",
-       "      <td>Gambian Mandinka</td>\n",
-       "      <td>GWD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>Punjabi,Punjabi</td>\n",
-       "      <td>PJL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>522</th>\n",
-       "      <td>Gambian Mandinka,Gambian</td>\n",
-       "      <td>GWD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>542</th>\n",
-       "      <td>Esan</td>\n",
-       "      <td>ESN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>544</th>\n",
-       "      <td>Esan,Esan</td>\n",
-       "      <td>ESN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>550</th>\n",
-       "      <td>Bengali</td>\n",
-       "      <td>BEB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>561</th>\n",
-       "      <td>Mende,Mende</td>\n",
-       "      <td>MSL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>566</th>\n",
-       "      <td>Mende</td>\n",
-       "      <td>MSL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>683</th>\n",
-       "      <td>Telugu</td>\n",
-       "      <td>ITU</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>692</th>\n",
-       "      <td>Tamil</td>\n",
-       "      <td>STU</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>837</th>\n",
-       "      <td>CEPH</td>\n",
-       "      <td>CEU</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>849</th>\n",
-       "      <td>Yoruba</td>\n",
-       "      <td>YRI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>891</th>\n",
-       "      <td>Han Chinese</td>\n",
-       "      <td>CHB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>929</th>\n",
-       "      <td>Japanese</td>\n",
-       "      <td>JPT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>930</th>\n",
-       "      <td>Japanese,Japanese</td>\n",
-       "      <td>JPT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>Luhya</td>\n",
-       "      <td>LWK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1087</th>\n",
-       "      <td>Mexican Ancestry</td>\n",
-       "      <td>MXL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1112</th>\n",
-       "      <td>African Ancestry SW</td>\n",
-       "      <td>ASW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1188</th>\n",
-       "      <td>Toscani</td>\n",
-       "      <td>TSI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1204</th>\n",
-       "      <td>Gujarati</td>\n",
-       "      <td>GIH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1369</th>\n",
-       "      <td>British,English</td>\n",
-       "      <td>GBR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1539</th>\n",
-       "      <td>Kinh,Kinh Vietnamese</td>\n",
-       "      <td>KHV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977</th>\n",
-       "      <td>Bengali,Bengali</td>\n",
-       "      <td>BEB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2192</th>\n",
-       "      <td>Iberian,Mende</td>\n",
-       "      <td>IBS,MSL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3066</th>\n",
-       "      <td>Luhya,Luhya</td>\n",
-       "      <td>LWK</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Population name Population code\n",
-       "0                      Finnish             FIN\n",
-       "14             Finnish,Finnish             FIN\n",
-       "17                     British             GBR\n",
-       "43        Southern Han Chinese             CHS\n",
-       "92                Puerto Rican             PUR\n",
-       "105                Dai Chinese             CDX\n",
-       "107                  Colombian             CLM\n",
-       "215            Iberian,Spanish             IBS\n",
-       "217                    Iberian             IBS\n",
-       "227            Kinh Vietnamese             KHV\n",
-       "235                   Peruvian             PEL\n",
-       "241                    Punjabi             PJL\n",
-       "285          African Caribbean             ACB\n",
-       "446           Gambian Mandinka             GWD\n",
-       "497            Punjabi,Punjabi             PJL\n",
-       "522   Gambian Mandinka,Gambian             GWD\n",
-       "542                       Esan             ESN\n",
-       "544                  Esan,Esan             ESN\n",
-       "550                    Bengali             BEB\n",
-       "561                Mende,Mende             MSL\n",
-       "566                      Mende             MSL\n",
-       "683                     Telugu             ITU\n",
-       "692                      Tamil             STU\n",
-       "837                       CEPH             CEU\n",
-       "849                     Yoruba             YRI\n",
-       "891                Han Chinese             CHB\n",
-       "929                   Japanese             JPT\n",
-       "930          Japanese,Japanese             JPT\n",
-       "995                      Luhya             LWK\n",
-       "1087          Mexican Ancestry             MXL\n",
-       "1112       African Ancestry SW             ASW\n",
-       "1188                   Toscani             TSI\n",
-       "1204                  Gujarati             GIH\n",
-       "1369           British,English             GBR\n",
-       "1539      Kinh,Kinh Vietnamese             KHV\n",
-       "1977           Bengali,Bengali             BEB\n",
-       "2192             Iberian,Mende         IBS,MSL\n",
-       "3066               Luhya,Luhya             LWK"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sample_annotation_df[[\"Population name\",\"Population code\"]].drop_duplicates()"
+    "# sample_annotation_df[[\"Population name\",\"Population code\"]].drop_duplicates()"
    ]
   },
   {
@@ -363,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,19 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_random_1k_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_random_1k_variant.csv\n",
-      "Read genotype array of shape (3202, 1000) and variant info dataframe of shape (1000, 4)\n",
+      "Reading data from files /project/datacamp/team11/data/preprocessed/merged_support3_variance_0.1_matrix.npy and /project/datacamp/team11/data/preprocessed/merged_support3_variance_0.1_variant.csv\n",
+      "Read genotype array of shape (3202, 5105448) and variant info dataframe of shape (5105448, 4)\n",
       "\n",
-      "genotype array shape (#samples, #features) : (3202, 1000)\n",
+      "genotype array shape (#samples, #features) : (3202, 5105448)\n",
       "sample annotations (#samples, ) : (3202, 9)\n",
-      "variant info dataframe (#features, ): (1000, 4)\n"
+      "variant info dataframe (#features, ): (5105448, 4)\n"
      ]
     }
    ],
@@ -611,11 +344,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This filter will retain 1048576 / 5105448 variants\n",
+      "Filter variant retained 1048576 / 5105448\n"
+     ]
+    }
+   ],
    "source": [
-    "n_random_selection = 10000\n",
+    "n_random_selection = 1048576\n",
     "\n",
     "num_snps = snp_dataset.genotype_array.shape[1]\n",
     "random_selection_filter = np.zeros(num_snps, dtype=bool)\n",
@@ -630,11 +372,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "genotype matrix shape (#samples, #features) : (3202, 1048576) -> saved to /project/datacamp/team11/data/preprocessed/merged_support3_variance_0.1_random_1M_matrix.npy\n",
+      "variant info dataframe (#features, ): (1048576, 4) -> saved to /project/datacamp/team11/data/preprocessed/merged_support3_variance_0.1_random_1M_variant.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "snp_dataset.save_data(os.path.join(preprocess_path, \"merged_support3_variance_0.24995_random_10k\"))"
+    "snp_dataset.save_data(os.path.join(preprocess_path, f\"{target_data_name}_random_1M\"))"
    ]
   },
   {
