--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -344,20 +344,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This filter will retain 1048576 / 5105448 variants\n",
-      "Filter variant retained 1048576 / 5105448\n"
+      "This filter will retain 100000 / 5105448 variants\n",
+      "Filter variant retained 100000 / 5105448\n"
      ]
     }
    ],
    "source": [
-    "n_random_selection = 1048576\n",
+    "n_random_selection = 100000\n",
     "\n",
     "num_snps = snp_dataset.genotype_array.shape[1]\n",
     "random_selection_filter = np.zeros(num_snps, dtype=bool)\n",
@@ -372,20 +372,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "genotype matrix shape (#samples, #features) : (3202, 1048576) -> saved to /project/datacamp/team11/data/preprocessed/merged_support3_variance_0.1_random_1M_matrix.npy\n",
-      "variant info dataframe (#features, ): (1048576, 4) -> saved to /project/datacamp/team11/data/preprocessed/merged_support3_variance_0.1_random_1M_variant.csv\n"
+      "genotype matrix shape (#samples, #features) : (3202, 100000) -> saved to /project/datacamp/team11/data/preprocessed/merged_support3_variance_0.1_random_100k_matrix.npy\n",
+      "variant info dataframe (#features, ): (100000, 4) -> saved to /project/datacamp/team11/data/preprocessed/merged_support3_variance_0.1_random_100k_variant.csv\n"
      ]
     }
    ],
    "source": [
-    "snp_dataset.save_data(os.path.join(preprocess_path, f\"{target_data_name}_random_1M\"))"
+    "snp_dataset.save_data(os.path.join(preprocess_path, f\"{target_data_name}_random_100k\"))"
    ]
   },
   {
