implemented pre-selection

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,29 +98,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_data_name = \"merged\" #\"merged_support3_variance_0.1\" #\"merged\" #merged_support3_variance_0.01\n",
+    "target_data_name = \"merged_support3_variance_0.01_random_50k_seed_42\" #\"merged\" #\"merged_support3_variance_0.1\" #\"merged\" #merged_support3_variance_0.01\n",
     "target_data_file_prefix = os.path.join(preprocess_path, target_data_name) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_variant.csv\n",
-      "Read genotype array of shape (3202, 61599150) and variant info dataframe of shape (61599150, 4)\n",
+      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.01_random_50k_seed_42_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.01_random_50k_seed_42_variant.csv\n",
+      "Read genotype array of shape (3202, 50000) and variant info dataframe of shape (50000, 4)\n",
       "\n",
-      "genotype array shape (#samples, #features) : (3202, 61599150)\n",
+      "genotype array shape (#samples, #features) : (3202, 50000)\n",
       "sample annotations (#samples, ) : (3202, 9)\n",
-      "variant info dataframe (#features, ): (61599150, 4)\n"
+      "variant info dataframe (#features, ): (50000, 4)\n"
      ]
     }
    ],
