--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,29 +98,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_data_name = \"merged_support3_variance_0.01_random_50k_seed_42\" #\"merged\" #\"merged_support3_variance_0.1\" #\"merged\" #merged_support3_variance_0.01\n",
+    "target_data_name = \"merged_support3\" #\"merged\" #\"merged_support3_variance_0.1\" #\"merged\" #merged_support3_variance_0.01\n",
     "target_data_file_prefix = os.path.join(preprocess_path, target_data_name) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.01_random_50k_seed_42_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.01_random_50k_seed_42_variant.csv\n",
-      "Read genotype array of shape (3202, 50000) and variant info dataframe of shape (50000, 4)\n",
+      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_support3_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_support3_variant.csv\n",
+      "Read genotype array of shape (3202, 43034818) and variant info dataframe of shape (43034818, 4)\n",
       "\n",
-      "genotype array shape (#samples, #features) : (3202, 50000)\n",
+      "genotype array shape (#samples, #features) : (3202, 43034818)\n",
       "sample annotations (#samples, ) : (3202, 9)\n",
-      "variant info dataframe (#features, ): (50000, 4)\n"
+      "variant info dataframe (#features, ): (43034818, 4)\n"
      ]
     }
    ],
@@ -382,49 +382,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This filter will retain 1000000 / 2000000 variants\n",
-      "Filter variant retained 1000000 / 2000000\n"
+      "This filter will retain 1000 / 43034818 variants\n",
+      "Filter variant retained 1000 / 43034818\n"
      ]
     }
    ],
    "source": [
-    "n_random_selection = 1000000\n",
+    "n_random_selection = 1000\n",
     "random_seed = 42\n",
     "\n",
+    "rng = np.random.default_rng(seed = random_seed)\n",
     "num_snps = snp_dataset.genotype_array.shape[1]\n",
-    "random_selection_filter = np.zeros(num_snps, dtype=bool)\n",
-    "np.random.seed(random_seed)\n",
-    "selected_indices = np.random.choice(num_snps, n_random_selection, replace=False)\n",
-    "random_selection_filter[selected_indices] = True\n",
-    "print(f\"This filter will retain {random_selection_filter.sum()} /\", snp_dataset.genotype_array.shape[1], \"variants\")\n",
+    "boolean_mask = np.zeros(num_snps, dtype=bool)\n",
+    "selected_indices = rng.choice(num_snps, n_random_selection, replace=False)\n",
+    "boolean_mask[selected_indices] = True\n",
+    "print(f\"This filter will retain {boolean_mask.sum()} /\", snp_dataset.genotype_array.shape[1], \"variants\")\n",
     "\n",
     "#snp_dataset_filtered = snp_dataset.filter_variant(random_selection_filter, inplace = False)\n",
-    "snp_dataset.filter_variant(random_selection_filter, inplace = True)"
+    "snp_dataset.filter_variant(boolean_mask, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "genotype matrix shape (#samples, #features) : (3202, 1000000) -> saved to /home/jinhyun/data/1kGP/preprocessed/merged_support3_random_1M_seed_42_matrix.npy\n",
-      "variant info dataframe (#features, ): (1000000, 4) -> saved to /home/jinhyun/data/1kGP/preprocessed/merged_support3_random_1M_seed_42_variant.csv\n"
+      "genotype matrix shape (#samples, #features) : (3202, 1000) -> saved to /home/jinhyun/data/1kGP/preprocessed/merged_support3_random_1k_seed_42_matrix.npy\n",
+      "variant info dataframe (#features, ): (1000, 4) -> saved to /home/jinhyun/data/1kGP/preprocessed/merged_support3_random_1k_seed_42_variant.csv\n"
      ]
     }
    ],
    "source": [
-    "snp_dataset.save_data(os.path.join(preprocess_path, f\"{target_data_name}_random_1M_seed_{random_seed}\"))"
+    "snp_dataset.save_data(os.path.join(preprocess_path, f\"{target_data_name}_random_1k_seed_{random_seed}\"))"
    ]
   },
   {
